Fix column spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -128,12 +128,12 @@ header h1 {
 #bus-times li.bus-item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-color: var(--list-item-background);
     margin: 5px 0;
     padding: 15px;
     border-radius: 10px;
     font-size: 1.2em;
+    justify-content: space-between;
 }
 
 .route-number {
@@ -155,14 +155,16 @@ header h1 {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    margin-left: 10px;
+    margin-left: 15px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .bus-stop {
     font-size: 1.2em;
+    text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .bus-countdown {
@@ -175,9 +177,9 @@ header h1 {
     font-weight: bold;
     text-align: right;
     flex-shrink: 0;
+    padding-left: 20px;
     align-self: center;
-    margin-left: auto; /* pushes the arrival time to the far right */
-    padding-left: 10px; /* add space between bus details and arrival time */
+    min-width: 80px;
 }
 
 .error {
@@ -257,7 +259,7 @@ button[type="submit"] {
 /* Full-screen adjustments */
 @media (min-width: 600px) {
     #bus-times li.bus-item {
-        padding: 10px 20px;
+        padding: 10px 25px;
     }
 
     .route-number {
@@ -266,7 +268,7 @@ button[type="submit"] {
     }
 
     .bus-details {
-        margin-left: 15px;
+        margin-left: 20px;
     }
 
     .bus-stop {
@@ -279,7 +281,8 @@ button[type="submit"] {
 
     .arrival-time {
         font-size: 1.3em;
-        padding-left: 20px;
+        padding-left: 25px;
+        min-width: 100px;
     }
 }
 
